--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <title>Mali Princ</title>
   </head>
   <body>
-    <h1>Mali Princ</h1>
-    <hr/>
-    Marinine knjige
+    <h1>Mali Princ - Marinine knjige</h1>
+    <a href="slike/srpski-latinica.jpg">Srpski latinica</a><br/>
+    <a href="slike/srpski-cirilica-1.jpg">Srpski cirilica 1</a><br/>
+    <a href="slike/srpski-cirilica-2.jpg">Srpski cirilica 2</a><br/>
+    <a href="slike/srpski-cirilica-3.jpg">Srpski cirilica 3</a><br/>
+    <a href="slike/bosanski.jpg">Bosanski</a><br/>
   </body>
 </html>
