--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
   <body>
     <h1>Mali Princ - Marinine knjige</h1>
     <a href="slike/srpski-latinica.jpg">Srpski latinica</a><br/>
-    <a href="slike/srpski-cirilica-1.jpg">Srpski cirilica 1</a><br/>
-    <a href="slike/srpski-cirilica-2.jpg">Srpski cirilica 2</a><br/>
-    <a href="slike/srpski-cirilica-3.jpg">Srpski cirilica 3</a><br/>
+    <a href="slike/srpski-cirilica-1.jpg">Srpski ćirilica 1</a><br/>
+    <a href="slike/srpski-cirilica-2.jpg">Srpski ćirilica 2</a><br/>
+    <a href="slike/srpski-cirilica-3.jpg">Srpski ćirilica 3</a><br/>
+    <a href="slike/arapski.jpg">Arapski</a><br/>
     <a href="slike/bosanski.jpg">Bosanski</a><br/>
+    <a href="slike/engleski.jpg">Engleski</a><br/>
+    <a href="slike/francuski.jpg">Francuski</a><br/>
+    <a href="slike/grcki.jpg">Grčki</a><br/>
+    <a href="slike/hindi.jpg">Hindi</a><br/>
+    <a href="slike/holandski.jpg">Holandski</a><br/>
+    <a href="slike/italijanski.jpg">Italijanski</a><br/>
+    <a href="slike/katalonski.jpg">Katalonski</a><br/>
+    <a href="slike/kineski.jpg">Kineski</a><br/>
+    <a href="slike/letonski.jpg">Letonski</a><br/>
+    <a href="slike/madjarski.jpg">Madjarski</a><br/>
+    <a href="slike/moliski.jpg">Moliški</a><br/>
+    <a href="slike/nemacki.jpg">Nemački</a><br/>
+    <a href="slike/ruski.jpg">Ruski</a><br/>
+    <a href="slike/slovacki.jpg">Slovački</a><br/>
+    <a href="slike/slovenacki.jpg">Slovenački</a><br/>
+    <a href="slike/svedski.jpg">Švedski</a><br/>
   </body>
 </html>
