--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
     <title>Mali Princ</title>
+    <style>
+      body {
+        background-color: #a0a0a0;
+        font-color: #ff80bf;
+      }
+    </style>
   </head>
   <body>
     <h1>Mali Princ - Marinine knjige</h1>
