--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <style>
       body {
         background-color: #a0a0a0;
-        font-color: #ff80bf;
+        color: #ff80bf;
+        font-family: Arial, Helvetica, sans-serif;
       }
     </style>
   </head>
