--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         color: #ff80bf;
         font-family: Arial, Helvetica, sans-serif;
       }
+      a {
+        color: #000066;
+      }
     </style>
   </head>
   <body>
