--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         font-family: Arial, Helvetica, sans-serif;
       }
       a {
+        font-size: 16px;
         color: #000066;
       }
     </style>
