--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     <a href="slike/madjarski.jpg">Madjarski</a><br/>
     <a href="slike/moliski.jpg">Moliški</a><br/>
     <a href="slike/nemacki.jpg">Nemački</a><br/>
+    <a href="slike/prekomurski.jpg">Prekomurski</a><br/>
     <a href="slike/ruski.jpg">Ruski</a><br/>
     <a href="slike/slovacki.jpg">Slovački</a><br/>
     <a href="slike/slovenacki.jpg">Slovenački</a><br/>
+    <a href="slike/spanski.jpg">Španski</a><br/>
     <a href="slike/svedski.jpg">Švedski</a><br/>
   </body>
 </html>
