--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
     <a href="slike/bosanski.jpg">Bosanski</a><br/>
     <a href="slike/engleski.jpg">Engleski</a><br/>
     <a href="slike/francuski.jpg">Francuski</a><br/>
+    <a href="slike/filipinski.jpg">Filipinski</a><br/>
+    <a href="slike/filipinski(bicol).jpg">Filipinski(bicol)</a><br/>
     <a href="slike/grcki.jpg">Grčki</a><br/>
     <a href="slike/hindi.jpg">Hindi</a><br/>
     <a href="slike/holandski.jpg">Holandski</a><br/>
     <a href="slike/italijanski.jpg">Italijanski</a><br/>
     <a href="slike/katalonski.jpg">Katalonski</a><br/>
     <a href="slike/kineski.jpg">Kineski</a><br/>
+    <a href="slike/kreolski(chavacano).jpg">Kreolski(chavacano)</a><br/>
     <a href="slike/letonski.jpg">Letonski</a><br/>
     <a href="slike/madjarski.jpg">Madjarski</a><br/>
     <a href="slike/makedonski.jpg">Makedonski</a><br/>
