--- a/index.html
+++ b/index.html
@@ -30,14 +30,19 @@
     <a href="slike/hindi.jpg">Hindi</a><br/>
     <a href="slike/holandski.jpg">Holandski</a><br/>
     <a href="slike/italijanski.jpg">Italijanski</a><br/>
+    <a href="slike/kazahstanski.jpg">Kazahstanski</a><br/>
     <a href="slike/katalonski.jpg">Katalonski</a><br/>
     <a href="slike/kineski.jpg">Kineski</a><br/>
     <a href="slike/kreolski(chavacano).jpg">Kreolski(chavacano)</a><br/>
+    <a href="slike/latinski.jpg">Latinski</a><br/>
     <a href="slike/letonski.jpg">Letonski</a><br/>
     <a href="slike/madjarski.jpg">Madjarski</a><br/>
     <a href="slike/makedonski.jpg">Makedonski</a><br/>
+    <a href="slike/milanski dijalekt.jpg">Milanski dijalekt</a><br/>
     <a href="slike/moliski.jpg">Moliški</a><br/>
     <a href="slike/nemacki.jpg">Nemački</a><br/>
+    <a href="slike/poljski.jpg">Poljski</a><br/>
+    <a href="slike/portugalski (brazil).jpg">Portugalski (Brazil)</a><br/>
     <a href="slike/prekomurski.jpg">Prekomurski</a><br/>
     <a href="slike/ruski.jpg">Ruski</a><br/>
     <a href="slike/slovacki.jpg">Slovački</a><br/>
