--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a href="slike/srpski-cirilica-2.jpg">Srpski ćirilica 2</a><br/>
     <a href="slike/srpski-cirilica-3.jpg">Srpski ćirilica 3</a><br/>
     <a href="slike/arapski.jpg">Arapski</a><br/>
+    <a href="slike/baskirski.jpg">Baskirski</a><br/>
     <a href="slike/bosanski.jpg">Bosanski</a><br/>
     <a href="slike/engleski.jpg">Engleski</a><br/>
     <a href="slike/francuski.jpg">Francuski</a><br/>
