--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <a href="slike/slovenacki.jpg">Slovenački</a><br/>
     <a href="slike/spanski.jpg">Španski</a><br/>
     <a href="slike/svedski.jpg">Švedski</a><br/>
+    <a href="slike/toba.jpg">Toba</a><br/>
     <a href="slike/vijetnamski.jpg">Vijetnamski</a><br/>
   </body>
 </html>
