--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a href="slike/arapski.jpg">Arapski</a><br/>
     <a href="slike/baskirski.jpg">Baskirski</a><br/>
     <a href="slike/bosanski.jpg">Bosanski</a><br/>
+    <a href="slike/bugarski.jpg">Bugarski</a><br/>
     <a href="slike/engleski.jpg">Engleski</a><br/>
     <a href="slike/esperanto.jpg">Esperanto</a><br/>
     <a href="slike/francuski.jpg">Francuski</a><br/>
