--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <a href="slike/spanski.jpg">Španski</a><br/>
     <a href="slike/svedski.jpg">Švedski</a><br/>
     <a href="slike/toba.jpg">Toba</a><br/>
+    <a href="slike/turski.jpg">Turski</a><br/>
     <a href="slike/vijetnamski.jpg">Vijetnamski</a><br/>
   </body>
 </html>
