--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <a href="slike/milanski dijalekt.jpg">Milanski dijalekt</a><br/>
     <a href="slike/moliski.jpg">Moliški</a><br/>
     <a href="slike/nemacki.jpg">Nemački</a><br/>
+    <a href="slike/osmanski turski.jpg">Osmanski turski</a><br/>
     <a href="slike/poljski.jpg">Poljski</a><br/>
     <a href="slike/portugalski (brazil).jpg">Portugalski (Brazil)</a><br/>
     <a href="slike/prekomurski.jpg">Prekomurski</a><br/>
