--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <a href="slike/katalonski.jpg">Katalonski</a><br/>
     <a href="slike/kineski.jpg">Kineski</a><br/>
     <a href="slike/kreolski(chavacano).jpg">Kreolski(chavacano)</a><br/>
+    <a href="slike/kurdski.jpg">Kurdski</a><br/>
     <a href="slike/latinski.jpg">Latinski</a><br/>
     <a href="slike/letonski.jpg">Letonski</a><br/>
     <a href="slike/madjarski.jpg">Madjarski</a><br/>
