--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href="slike/hindi.jpg">Hindi</a><br/>
     <a href="slike/holandski.jpg">Holandski</a><br/>
     <a href="slike/italijanski.jpg">Italijanski</a><br/>
-    <a href="slike/kazahstanski.jpg">Kazahstanski</a><br/>
+    <a href="slike/kazaski.jpg">Kazaski</a><br/>
     <a href="slike/katalonski.jpg">Katalonski</a><br/>
     <a href="slike/kineski.jpg">Kineski</a><br/>
     <a href="slike/kreolski(chavacano).jpg">Kreolski(chavacano)</a><br/>
