--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <a href="slike/filipinski.jpg">Filipinski</a><br/>
     <a href="slike/filipinski(bicol).jpg">Filipinski (bicol)</a><br/>
     <a href="slike/grcki.jpg">Grčki</a><br/>
+    <a href="slike/hebrejski.jpg">Hebrejski</a><br/>
     <a href="slike/hindi.jpg">Hindi</a><br/>
     <a href="slike/holandski.jpg">Holandski</a><br/>
     <a href="slike/italijanski.jpg">Italijanski</a><br/>
