--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <a href="slike/portugalski (brazil).jpg">Portugalski (Brazil)</a><br/>
     <a href="slike/prekomurski.jpg">Prekomurski</a><br/>
     <a href="slike/ruski.jpg">Ruski</a><br/>
+    <a href="slike/sanskrit.jpg">Sanskrit</a><br/>
     <a href="slike/slovacki.jpg">Slovački</a><br/>
     <a href="slike/slovenacki.jpg">Slovenački</a><br/>
     <a href="slike/spanski.jpg">Španski</a><br/>
