--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <a href="slike/slovacki.jpg">Slovački</a><br/>
     <a href="slike/slovenacki.jpg">Slovenački</a><br/>
     <a href="slike/spanski.jpg">Španski</a><br/>
+    <a href="slike/staroegipatski.jpg">Staroegipatski</a><br/>
     <a href="slike/svedski.jpg">Švedski</a><br/>
     <a href="slike/tibetanski.jpg">Tibetanski</a><br/>
     <a href="slike/toba.jpg">Toba</a><br/>
