--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <a href="slike/slovenacki.jpg">Slovenački</a><br/>
     <a href="slike/spanski.jpg">Španski</a><br/>
     <a href="slike/staroegipatski.jpg">Staroegipatski</a><br/>
+    <a href="slike/starogrcki.jpg">Starogrcki</a><br/>
     <a href="slike/svedski.jpg">Švedski</a><br/>
     <a href="slike/tibetanski.jpg">Tibetanski</a><br/>
     <a href="slike/toba.jpg">Toba</a><br/>
