--- a/new.html
+++ b/new.html
@@ -16,6 +16,38 @@
   </head>
   <body>
     <h1>Mali Princ - Marinine knjige</h1>
+    <table>
+      <tr>
+        <th>Jezik</th>
+        <th>Language</th>
+        <th>Version</th>
+        <th>Image</th>
+      </tr>
+      <tr>
+        <td>Srpski</td>
+        <td>Serbian</td>
+        <td></td>
+        <td><a href="slike/srpski-latinica.jpg"><img src="slike/srpski-latinica.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
+        <td>Srpski ćirilica</td>
+        <td>Serbian cyrilic</td>
+        <td>1</td>
+        <td><a href="slike/srpski-cirilica-1.jpg"><img src="slike/srpski-cirilica-1.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
+      </tr>
+        <td>Srpski ćirilica</td>
+        <td>Serbian cyrilic</td>
+        <td>2</td>
+        <td><a href="slike/srpski-cirilica-2.jpg"><img src="slike/srpski-cirilica-2.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
+      </tr>
+        <td>Srpski ćirilica</td>
+        <td>Serbian cyrilic</td>
+        <td>3</td>
+        <td><a href="slike/srpski-cirilica-3.jpg"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
+    </table>    
+    
     <a href="slike/srpski-latinica.jpg">Srpski latinica</a><br/>
     <a href="slike/srpski-cirilica-1.jpg">Srpski ćirilica 1</a><br/>
     <a href="slike/srpski-cirilica-2.jpg">Srpski ćirilica 2</a><br/>
