--- a/new.html
+++ b/new.html
@@ -4,11 +4,14 @@
     <style>
       body {
         background-color: #a0a0a0;
-        color: #ff80bf;
+        color: #000066;
+        font-size: 16px;
         font-family: Arial, Helvetica, sans-serif;
       }
+      H1 {
+        color: #ff80bf;
+      }
       a {
-        font-size: 16px;
         color: #000066;
         text-decoration: none;
       }
@@ -16,7 +19,7 @@
   </head>
   <body>
     <h1>Mali Princ - Marinine knjige</h1>
-    <table>
+    <table border="1">
       <tr>
         <th>Jezik</th>
         <th>Language</th>
