--- a/new.html
+++ b/new.html
@@ -8,12 +8,19 @@
         font-size: 16px;
         font-family: Arial, Helvetica, sans-serif;
       }
-      H1 {
+      h1 {
         color: #ff80bf;
+      }
+      th {
+        text-align: left;
+        width: 25em;
       }
       a {
         color: #000066;
         text-decoration: none;
+      }
+      .center {
+        text-align: center;
       }
     </style>
   </head>
@@ -28,33 +35,30 @@
       </tr>
       <tr>
         <td>Srpski</td>
-        <td>Serbian</td>
-        <td></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language">Serbian</a></td>
+        <td class="center"></td>
         <td><a href="slike/srpski-latinica.jpg"><img src="slike/srpski-latinica.jpg" width="50px" heiht="100px"></a></td>
       </tr>
         <td>Srpski ćirilica</td>
-        <td>Serbian cyrilic</td>
-        <td>1</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet">Serbian cyrilic</a></td>
+        <td class="center">1</td>
         <td><a href="slike/srpski-cirilica-1.jpg"><img src="slike/srpski-cirilica-1.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       </tr>
         <td>Srpski ćirilica</td>
-        <td>Serbian cyrilic</td>
-        <td>2</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet">Serbian cyrilic</a></td>
+        <td class="center">2</td>
         <td><a href="slike/srpski-cirilica-2.jpg"><img src="slike/srpski-cirilica-2.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       </tr>
         <td>Srpski ćirilica</td>
-        <td>Serbian cyrilic</td>
-        <td>3</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet">Serbian cyrilic</a></td>
+        <td class="center">3</td>
         <td><a href="slike/srpski-cirilica-3.jpg"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
       </tr>
     </table>    
     
-    <a href="slike/srpski-latinica.jpg">Srpski latinica</a><br/>
-    <a href="slike/srpski-cirilica-1.jpg">Srpski ćirilica 1</a><br/>
-    <a href="slike/srpski-cirilica-2.jpg">Srpski ćirilica 2</a><br/>
-    <a href="slike/srpski-cirilica-3.jpg">Srpski ćirilica 3</a><br/>
+    <hr>
     <a href="slike/arapski.jpg">Arapski</a><br/>
     <a href="slike/baskirski.jpg">Baskirski</a><br/>
     <a href="slike/bosanski.jpg">Bosanski</a><br/>
