--- a/new.html
+++ b/new.html
@@ -13,7 +13,7 @@
       }
       th {
         text-align: left;
-        width: 25em;
+        width: 15em;
       }
       a {
         color: #000066;
@@ -26,11 +26,11 @@
   </head>
   <body>
     <h1>Mali Princ - Marinine knjige</h1>
-    <table border="1">
+    <table border="0">
       <tr>
         <th>Jezik</th>
         <th>Language</th>
-        <th>Version</th>
+        <th class="center">Version</th>
         <th>Image</th>
       </tr>
       <tr>
