--- a/new.html
+++ b/new.html
@@ -19,6 +19,10 @@
         color: #000066;
         text-decoration: none;
       }
+      table {
+        border-collapse: collapse;
+        border: 1px solid #ffffff;
+      }
       .center {
         text-align: center;
       }
@@ -26,35 +30,35 @@
   </head>
   <body>
     <h1>Mali Princ - Marinine knjige</h1>
-    <table border="0">
+    <table>
       <tr>
         <th>Jezik</th>
         <th>Language</th>
         <th class="center">Version</th>
-        <th>Image</th>
+        <th class="center">Image</th>
       </tr>
       <tr>
         <td>Srpski</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_language">Serbian</a></td>
         <td class="center"></td>
-        <td><a href="slike/srpski-latinica.jpg"><img src="slike/srpski-latinica.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/srpski-latinica.jpg"><img src="slike/srpski-latinica.jpg" width="50px" heiht="100px"></a></td>
       </tr>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet">Serbian cyrilic</a></td>
         <td class="center">1</td>
-        <td><a href="slike/srpski-cirilica-1.jpg"><img src="slike/srpski-cirilica-1.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/srpski-cirilica-1.jpg"><img src="slike/srpski-cirilica-1.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       </tr>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet">Serbian cyrilic</a></td>
         <td class="center">2</td>
-        <td><a href="slike/srpski-cirilica-2.jpg"><img src="slike/srpski-cirilica-2.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/srpski-cirilica-2.jpg"><img src="slike/srpski-cirilica-2.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       </tr>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet">Serbian cyrilic</a></td>
         <td class="center">3</td>
-        <td><a href="slike/srpski-cirilica-3.jpg"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/srpski-cirilica-3.jpg"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
       </tr>
     </table>    
     
