--- a/new.html
+++ b/new.html
@@ -14,6 +14,10 @@
       th {
         text-align: left;
         width: 15em;
+        padding: 2px;
+      }
+      td {
+        padding: 2px;
       }
       a {
         color: #000066;
