--- a/new.html
+++ b/new.html
@@ -14,10 +14,10 @@
       th {
         text-align: left;
         width: 15em;
-        padding: 2px;
+        padding: 3px;
       }
       td {
-        padding: 2px;
+        padding: 3px;
       }
       a {
         color: #000066;
@@ -34,7 +34,7 @@
   </head>
   <body>
     <h1>Mali Princ - Marinine knjige</h1>
-    <table>
+    <table border="1">
       <tr>
         <th>Jezik</th>
         <th>Language</th>
