--- a/new.html
+++ b/new.html
@@ -43,26 +43,26 @@
       </tr>
       <tr>
         <td>Srpski</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_language">Serbian</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian</a></td>
         <td class="center"></td>
-        <td class="center"><a href="slike/srpski-latinica.jpg"><img src="slike/srpski-latinica.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/srpski-latinica.jpg" target="_blank"><img src="slike/srpski-latinica.jpg" width="50px" heiht="100px"></a></td>
       </tr>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
         <td class="center">1</td>
-        <td class="center"><a href="slike/srpski-cirilica-1.jpg"><img src="slike/srpski-cirilica-1.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/srpski-cirilica-1.jpg" target="_blank"><img src="slike/srpski-cirilica-1.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       </tr>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
         <td class="center">2</td>
-        <td class="center"><a href="slike/srpski-cirilica-2.jpg"><img src="slike/srpski-cirilica-2.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/srpski-cirilica-2.jpg" target="_blank"><img src="slike/srpski-cirilica-2.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       </tr>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
         <td class="center">3</td>
-        <td class="center"><a href="slike/srpski-cirilica-3.jpg"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/srpski-cirilica-3.jpg" target="_blank"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
       </tr>
     </table>    
     
