--- a/new.html
+++ b/new.html
@@ -64,9 +64,18 @@
         <td class="center">3</td>
         <td class="center"><a href="slike/srpski-cirilica-3.jpg" target="_blank"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
       </tr>
-    </table>    
+
+<!––
+      </tr>
+        <td>##IME NA SRPSKOM##/td>
+        <td><a href="##LINK KA WIKIPEDIJI##" target="_blank">##IME NA ENGLESKOM##</a></td>
+        <td class="center">##VERZIJA ILI PRAAZNO##</td>
+        <td class="center"><a href="slike/##NAZIV SLIKE##" target="_blank"><img src="slike/##NAZIV SLIKE##" width="50px" heiht="100px"></a></td>
+      </tr>
+-->
+
+</table>    
     
-    <hr>
     <a href="slike/arapski.jpg">Arapski</a><br/>
     <a href="slike/baskirski.jpg">Baskirski</a><br/>
     <a href="slike/bosanski.jpg">Bosanski</a><br/>
