--- a/new.html
+++ b/new.html
@@ -30,35 +30,44 @@
       .center {
         text-align: center;
       }
+      .number {
+        text-align: right;
+        width: 3em;
+      }
     </style>
   </head>
   <body>
     <h1>Mali Princ - Marinine knjige</h1>
     <table border="1">
       <tr>
+        <th></th>
         <th>Jezik</th>
         <th>Language</th>
         <th class="center">Version</th>
         <th class="center">Image</th>
       </tr>
       <tr>
+        <td class="number">1</td>
         <td>Srpski</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian</a></td>
         <td class="center"></td>
         <td class="center"><a href="slike/srpski-latinica.jpg" target="_blank"><img src="slike/srpski-latinica.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+        <td class="number">2</td>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
         <td class="center">1</td>
         <td class="center"><a href="slike/srpski-cirilica-1.jpg" target="_blank"><img src="slike/srpski-cirilica-1.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       </tr>
+        <td class="number">3</td>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
         <td class="center">2</td>
         <td class="center"><a href="slike/srpski-cirilica-2.jpg" target="_blank"><img src="slike/srpski-cirilica-2.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       </tr>
+        <td class="number">4</td>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
         <td class="center">3</td>
@@ -67,6 +76,7 @@
 
 <!––
       </tr>
+        <td class="number">##BROJ##</td>
         <td>##IME NA SRPSKOM##/td>
         <td><a href="##LINK KA WIKIPEDIJI##" target="_blank">##IME NA ENGLESKOM##</a></td>
         <td class="center">##VERZIJA ILI PRAAZNO##</td>
