--- a/new.html
+++ b/new.html
@@ -74,9 +74,9 @@
         <td class="center"><a href="slike/srpski-cirilica-3.jpg" target="_blank"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 
-      </tr>
+      <tr>
         <td class="number">##BROJ##</td>
-        <td>##IME NA SRPSKOM##/td>
+        <td>##IME NA SRPSKOM##</td>
         <td><a href="##LINK KA WIKIPEDIJI##" target="_blank">##IME NA ENGLESKOM##</a></td>
         <td class="center">##VERZIJA ILI PRAAZNO##</td>
         <td class="center"><a href="slike/##NAZIV SLIKE##" target="_blank"><img src="slike/##NAZIV SLIKE##" width="50px" heiht="100px"></a></td>
