Final look for table, fixed UTF-8 issue

--- a/new.html
+++ b/new.html
@@ -1,6 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <html>
   <head>
     <title>Mali Princ</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <style>
       body {
         background-color: #a0a0a0;
@@ -14,10 +16,12 @@
       th {
         text-align: left;
         width: 15em;
-        padding: 3px;
+        padding: 5px;
+        border: 1px solid #ffffff;
       }
       td {
-        padding: 3px;
+        padding: 5px;
+        border: 1px solid #ffffff;
       }
       a {
         color: #000066;
@@ -40,7 +44,7 @@
     <h1>Mali Princ - Marinine knjige</h1>
     <table border="1">
       <tr>
-        <th></th>
+        <th class="number"></th>
         <th>Jezik</th>
         <th>Language</th>
         <th class="center">Version</th>
@@ -74,6 +78,7 @@
         <td class="center"><a href="slike/srpski-cirilica-3.jpg" target="_blank"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 
+<!--
       <tr>
         <td class="number">##BROJ##</td>
         <td>##IME NA SRPSKOM##</td>
@@ -81,6 +86,7 @@
         <td class="center">##VERZIJA ILI PRAAZNO##</td>
         <td class="center"><a href="slike/##NAZIV SLIKE##" target="_blank"><img src="slike/##NAZIV SLIKE##" width="50px" heiht="100px"></a></td>
       </tr>
+-->
 
 </table>    
     
