--- a/new.html
+++ b/new.html
@@ -82,7 +82,7 @@
         <td>Arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic language</a></td>
         <td class="center"></td>
-        <td class="center"><a href="slike/slike/arapski.jpg" target="_blank"><img src="slike/slike/arapski.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/slike-arapski.jpg" target="_blank"><img src="slike/slike-arapski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 
 <!--
