Fixed bug with image name

--- a/new.html
+++ b/new.html
@@ -77,12 +77,12 @@
         <td class="center">3</td>
         <td class="center"><a href="slike/srpski-cirilica-3.jpg" target="_blank"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
       </tr>
-<tr>
+      <tr>
         <td class="number">5</td>
         <td>Arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic language</a></td>
         <td class="center"></td>
-        <td class="center"><a href="slike/slike-arapski.jpg" target="_blank"><img src="slike/slike-arapski.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/arapski.jpg" target="_blank"><img src="slike/arapski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 
 <!--
