--- a/new.html
+++ b/new.html
@@ -84,6 +84,13 @@
         <td class="center"></td>
         <td class="center"><a href="slike/arapski.jpg" target="_blank"><img src="slike/arapski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">6</td>
+        <td>Baškirski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bashkir_language" target="_blank">Bashkir language</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/slike/baskirski.jpg" target="_blank"><img src="slike/slike/baskirski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 
 <!--
       <tr>
