--- a/new.html
+++ b/new.html
@@ -91,7 +91,13 @@
         <td class="center"></td>
         <td class="center"><a href="slike/baskirski.jpg" target="_blank"><img src="slike/baskirski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
-
+      <tr>
+        <td class="number">7</td>
+        <td>Bosanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/bosanski.jpg" target="_blank"><img src="slike/bosanski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number">##BROJ##</td>
