--- a/new.html
+++ b/new.html
@@ -98,6 +98,13 @@
         <td class="center"></td>
         <td class="center"><a href="slike/bosanski.jpg" target="_blank"><img src="slike/bosanski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">8</td>
+        <td>Bugarski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
+        <td class="center">1</td>
+        <td class="center"><a href="slike/bugarski.jpg" target="_blank"><img src="slike/bugarski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number">##BROJ##</td>
