--- a/new.html
+++ b/new.html
@@ -105,6 +105,14 @@
         <td class="center">1</td>
         <td class="center"><a href="slike/bugarski.jpg" target="_blank"><img src="slike/bugarski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">9</td>
+        <td>Bugarski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
+        <td class="center">2</td>
+        <td class="center"><a href="slike/bugarski 2.jpg" target="_blank"><img src="slike/bugarski 2.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
+
 <!--
       <tr>
         <td class="number">##BROJ##</td>
