--- a/new.html
+++ b/new.html
@@ -119,6 +119,13 @@
         <td class="center"></td>
         <td class="center"><a href="slike/engleski.jpg" target="_blank"><img src="slike/engleski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">11</td>
+        <td>Esperanto</td>
+        <td><a href="https://en.wikipedia.org/wiki/Esperanto" target="_blank">Esperanto</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/esperanto.jpg" target="_blank"><img src="slike/esperanto.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 
 <!--
       <tr>
