--- a/new.html
+++ b/new.html
@@ -133,6 +133,13 @@
         <td class="center"></td>
         <td class="center"><a href="slike/francuski.jpg" target="_blank"><img src="slike/francuski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">13</td>
+        <td>Filipinski</td>
+        <td><a href="https://en.wikipedia.org/wiki/Filipino_language" target="_blank">Filipino language</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/filipinski.jpg" target="_blank"><img src="slike/filipinski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 
 <!--
       <tr>
