--- a/new.html
+++ b/new.html
@@ -135,8 +135,8 @@
       </tr>
       <tr>
         <td class="number">13</td>
-        <td>Filipinski</td>
-        <td><a href="https://en.wikipedia.org/wiki/Filipino_language" target="_blank">Filipino language</a></td>
+        <td>Filipinski (Tagalog) jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tagalog_language" target="_blank">Filipino language</a></td>
         <td class="center"></td>
         <td class="center"><a href="slike/filipinski.jpg" target="_blank"><img src="slike/filipinski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
