--- a/new.html
+++ b/new.html
@@ -137,8 +137,15 @@
         <td class="number">13</td>
         <td>Filipinski (Tagalog) jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Tagalog_language" target="_blank">Filipino (Tagalog) language</a></td>
-        <td class="center"></td>
+        <td class="center">1</td>
         <td class="center"><a href="slike/filipinski.jpg" target="_blank"><img src="slike/filipinski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
+      <tr>
+        <td class="number">14</td>
+        <td>Filipinski (Bikol) jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bikol_languages" target="_blank">Filipino (Bikol) Language</a></td>
+        <td class="center">2</td>
+        <td class="center"><a href="slike/filipinski(bicol).jpg" target="_blank"><img src="slike/filipinski(bicol).jpg" width="50px" heiht="100px"></a></td>
       </tr>
 
 <!--
