--- a/new.html
+++ b/new.html
@@ -154,14 +154,20 @@
         <td class="center">1</td>
         <td class="center"><a href="slike/grcki.jpg" target="_blank"><img src="slike/grcki.jpg" width="50px" heiht="100px"></a></td>
       </tr>
-
+      <tr>
+        <td class="number">17</td>
+        <td>Starogrčki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Ancient_Greek" target="Ancient Greek</a></td>
+        <td class="center">2</td>
+        <td class="center"><a href="slike/##NAZIV SLIKE##" target="_blank"><img src="slike/##NAZIV SLIKE##" width="50px" heiht="100px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number">##BROJ##</td>
         <td>##IME NA SRPSKOM##</td>
         <td><a href="##LINK KA WIKIPEDIJI##" target="_blank">##IME NA ENGLESKOM##</a></td>
         <td class="center">##VERZIJA ILI PRAAZNO##</td>
-        <td class="center"><a href="slike/##NAZIV SLIKE##" target="_blank"><img src="slike/##NAZIV SLIKE##" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/grcki.jpg" target="_blank"><img src="slike/grcki.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 -->
 
