--- a/new.html
+++ b/new.html
@@ -157,9 +157,9 @@
       <tr>
         <td class="number">17</td>
         <td>Starogrčki jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Ancient_Greek" target="Ancient Greek</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Ancient_Greek" target=_blank">Ancient Greek language</a></td>
         <td class="center">2</td>
-        <td class="center"><a href="slike/##NAZIV SLIKE##" target="_blank"><img src="slike/##NAZIV SLIKE##" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/starogrcki.jpg" target="_blank"><img src="slike/starogrcki.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 <!--
       <tr>
