--- a/new.html
+++ b/new.html
@@ -166,7 +166,7 @@
         <td>Hebrejski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Hebrew_language" target="_blank">Hebrew language</a></td>
         <td class="center"></td>
-        <td class="center"><a href="like/hebrejski.jpg" target="_blank"><img src="like/hebrejski.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/hebrejski.jpg" target="_blank"><img src="slike/hebrejski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 <!--
       <tr>
