--- a/new.html
+++ b/new.html
@@ -175,6 +175,13 @@
         <td class="center"></td>
         <td class="center"><a href="slike/hindi.jpg" target="_blank"><img src="slike/hindi.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">20</td>
+        <td>Holandski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Dutch_language" target="_blank">Dutch language</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/holandski.jpg" target="_blank"><img src="slike/holandski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number">##BROJ##</td>
