--- a/new.html
+++ b/new.html
@@ -182,6 +182,13 @@
         <td class="center"></td>
         <td class="center"><a href="slike/holandski.jpg" target="_blank"><img src="slike/holandski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">21</td>
+        <td>Italijanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Italian_language" target="_blank">Italian language</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/italijanski.jpg" target="_blank"><img src="slike/italijanski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number">##BROJ##</td>
@@ -194,7 +201,7 @@
 
 </table>    
     
-    <a href="slike/holandski.jpg">Holandski</a><br/>
+   
     <a href="slike/italijanski.jpg">Italijanski</a><br/>
     <a href="slike/kazaski.jpg">Kazaski</a><br/>
     <a href="slike/katalonski.jpg">Katalonski</a><br/>
