--- a/new.html
+++ b/new.html
@@ -189,6 +189,13 @@
         <td class="center"></td>
         <td class="center"><a href="slike/italijanski.jpg" target="_blank"><img src="slike/italijanski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+          <tr>
+        <td class="number">22</td>
+        <td>Italijanski, Milanski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Milanese_dialect" target="_blank">Italian, Milanese dialect</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/italijanski.jpg" target="_blank"><img src="slike/italijanski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number">##BROJ##</td>
