--- a/new.html
+++ b/new.html
@@ -196,20 +196,26 @@
         <td class="center"></td>
         <td class="center"><a href="slike/italijanski.jpg" target="_blank"><img src="slike/italijanski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">23</td>
+        <td>Moliški dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect"_blank">Molise dialect</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/IME SLIKE##" target="_blank"><img src="slike/IME SLIKE##" width="50px" heiht="100px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number">##BROJ##</td>
         <td>##IME NA SRPSKOM##</td>
         <td><a href="##LINK KA WIKIPEDIJI##" target="_blank">##IME NA ENGLESKOM##</a></td>
         <td class="center">##VERZIJA ILI PRAAZNO##</td>
-        <td class="center"><a href="slike/IME SLIKE##" target="_blank"><img src="slike/IME SLIKE##" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/moliski.jpg" target="_blank"><img src="slike/moliski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 -->
 
 </table>    
     
    
-    <a href="slike/italijanski.jpg">Italijanski</a><br/>
     <a href="slike/kazaski.jpg">Kazaski</a><br/>
     <a href="slike/katalonski.jpg">Katalonski</a><br/>
     <a href="slike/kineski.jpg">Kineski</a><br/>
