--- a/new.html
+++ b/new.html
@@ -201,7 +201,7 @@
         <td>Moliški dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect"_blank">Molise dialect</a></td>
         <td class="center"></td>
-        <td class="center">slike/moliski.jpg<a href="" target="_blank"><img src="slike/moliski.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/moliski.jpg" target="_blank"><img src="slike/moliski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 <!--
       <tr>
