--- a/new.html
+++ b/new.html
@@ -203,6 +203,13 @@
         <td class="center"></td>
         <td class="center"><a href="slike/moliski.jpg" target="_blank"><img src="slike/moliski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">24</td>
+        <td>Kazaški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kazakh_language" target="_blank">Kazakh language</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/kazaski.jpg" target="_blank"><img src="slike/kazaski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number">##BROJ##</td>
