--- a/new.html
+++ b/new.html
@@ -210,6 +210,13 @@
         <td class="center"></td>
         <td class="center"><a href="slike/kazaski.jpg" target="_blank"><img src="slike/kazaski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">25</td>
+        <td>Kineski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chinese_language" target="_blank">Chinese language</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/kineski.jpg" target="_blank"><img src="slike/kineski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number">##BROJ##</td>
@@ -223,7 +230,6 @@
 </table>    
     
    
-    <a href="slike/kazaski.jpg">Kazaski</a><br/>
     <a href="slike/katalonski.jpg">Katalonski</a><br/>
     <a href="slike/kineski.jpg">Kineski</a><br/>
     <a href="slike/kreolski(chavacano).jpg">Kreolski (chavacano)</a><br/>
