--- a/new.html
+++ b/new.html
@@ -217,13 +217,20 @@
         <td class="center"></td>
         <td class="center"><a href="slike/kineski.jpg" target="_blank"><img src="slike/kineski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
+      <tr>
+        <td class="number">26</td>
+        <td>Kurdski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kurdish_languages" target="_blank">Kurdish language</a></td>
+        <td class="center"></td>
+        <td class="center"><a href="slike/moliski.jpg" target="_blank"><img src="slike/moliski.jpg" width="50px" heiht="100px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number">##BROJ##</td>
         <td>##IME NA SRPSKOM##</td>
         <td><a href="##LINK KA WIKIPEDIJI##" target="_blank">##IME NA ENGLESKOM##</a></td>
         <td class="center">##VERZIJA ILI PRAAZNO##</td>
-        <td class="center"><a href="slike/moliski.jpg" target="_blank"><img src="slike/moliski.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/kurdski.jpg" target="_blank"><img src="slike/kurdski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 -->
 
