--- a/new.html
+++ b/new.html
@@ -222,7 +222,7 @@
         <td>Kurdski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kurdish_languages" target="_blank">Kurdish language</a></td>
         <td class="center"></td>
-        <td class="center"><a href="slike/moliski.jpg" target="_blank"><img src="slike/moliski.jpg" width="50px" heiht="100px"></a></td>
+        <td class="center"><a href="slike/kurdski.jpg" target="_blank"><img src="slike/kurdski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 <!--
       <tr>
