--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <html>
   <head>
     <title>Mali Princ</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <style>
       body {
         background-color: #a0a0a0;
@@ -24,7 +26,7 @@
     <a href="slike/baskirski.jpg">Baskirski</a><br/>
     <a href="slike/bosanski.jpg">Bosanski</a><br/>
     <a href="slike/bugarski.jpg">Bugarski</a><br/>
-    <a href="slike/bugarski 2.jpg">Bugarski 2</a><br/>
+    <a href="slike/bugarski-2.jpg">Bugarski 2</a><br/>
     <a href="slike/engleski.jpg">Engleski</a><br/>
     <a href="slike/esperanto.jpg">Esperanto</a><br/>
     <a href="slike/francuski.jpg">Francuski</a><br/>
@@ -44,12 +46,12 @@
     <a href="slike/letonski.jpg">Letonski</a><br/>
     <a href="slike/madjarski.jpg">Madjarski</a><br/>
     <a href="slike/makedonski.jpg">Makedonski</a><br/>
-    <a href="slike/milanski dijalekt.jpg">Milanski dijalekt</a><br/>
+    <a href="slike/milanski-dijalekt.jpg">Milanski dijalekt</a><br/>
     <a href="slike/moliski.jpg">Moliški</a><br/>
     <a href="slike/nemacki.jpg">Nemački</a><br/>
-    <a href="slike/osmanski turski.jpg">Osmanski turski</a><br/>
+    <a href="slike/osmanski-turski.jpg">Osmanski turski</a><br/>
     <a href="slike/poljski.jpg">Poljski</a><br/>
-    <a href="slike/portugalski (brazil).jpg">Portugalski (Brazil)</a><br/>
+    <a href="slike/portugalski(brazil).jpg">Portugalski (Brazil)</a><br/>
     <a href="slike/prekomurski.jpg">Prekomurski</a><br/>
     <a href="slike/ruski.jpg">Ruski</a><br/>
     <a href="slike/sanskrit.jpg">Sanskrit</a><br/>
