--- a/new.html
+++ b/new.html
@@ -34,6 +34,10 @@
       .center {
         text-align: center;
       }
+      .rtl {
+        dir: rtl;
+        text-align: right;
+      }
       .number {
         text-align: right;
         width: 3em;
@@ -47,189 +51,190 @@
         <th class="number"></th>
         <th>Jezik</th>
         <th>Language</th>
-        <th class="center">Version</th>
+        <th>Title</th>
         <th class="center">Image</th>
       </tr>
       <tr>
-        <td class="number">1</td>
+        <td class="number">1.</td>
         <td>Srpski</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian</a></td>
-        <td class="center"></td>
+        <td>Mali princ</td>
         <td class="center"><a href="slike/srpski-latinica.jpg" target="_blank"><img src="slike/srpski-latinica.jpg" width="50px" heiht="100px"></a></td>
       </tr>
-        <td class="number">2</td>
+      <tr>
+        <td class="number">2.</td>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
-        <td class="center">1</td>
+        <td>Мали принц</td>
         <td class="center"><a href="slike/srpski-cirilica-1.jpg" target="_blank"><img src="slike/srpski-cirilica-1.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       </tr>
-        <td class="number">3</td>
+        <td class="number">3.</td>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
-        <td class="center">2</td>
+        <td>Мали принц</td>
         <td class="center"><a href="slike/srpski-cirilica-2.jpg" target="_blank"><img src="slike/srpski-cirilica-2.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       </tr>
-        <td class="number">4</td>
+        <td class="number">4.</td>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
-        <td class="center">3</td>
+        <td>Мали принц</td>
         <td class="center"><a href="slike/srpski-cirilica-3.jpg" target="_blank"><img src="slike/srpski-cirilica-3.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">5</td>
+        <td class="number">5.</td>
         <td>Arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic language</a></td>
-        <td class="center"></td>
+        <td class="rtl">شازده کوچولو</td>
         <td class="center"><a href="slike/arapski.jpg" target="_blank"><img src="slike/arapski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">6</td>
+        <td class="number">6.</td>
         <td>Baškirski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bashkir_language" target="_blank">Bashkir language</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/baskirski.jpg" target="_blank"><img src="slike/baskirski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">7</td>
+        <td class="number">7.</td>
         <td>Bosanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/bosanski.jpg" target="_blank"><img src="slike/bosanski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">8</td>
+        <td class="number">8.</td>
         <td>Bugarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
-        <td class="center">1</td>
+        <td></td>
         <td class="center"><a href="slike/bugarski.jpg" target="_blank"><img src="slike/bugarski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">9</td>
+        <td class="number">9.</td>
         <td>Bugarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
-        <td class="center">2</td>
-        <td class="center"><a href="slike/bugarski 2.jpg" target="_blank"><img src="slike/bugarski 2.jpg" width="50px" heiht="100px"></a></td>
+        <td></td>
+        <td class="center"><a href="slike/bugarski-2.jpg" target="_blank"><img src="slike/bugarski-2.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">10</td>
+        <td class="number">10.</td>
         <td>Engleski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/English_language" target="_blank">English language</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/engleski.jpg" target="_blank"><img src="slike/engleski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">11</td>
+        <td class="number">11.</td>
         <td>Esperanto</td>
         <td><a href="https://en.wikipedia.org/wiki/Esperanto" target="_blank">Esperanto</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/esperanto.jpg" target="_blank"><img src="slike/esperanto.jpg" width="50px" heiht="100px"></a></td>
       </tr>
-<tr>
-        <td class="number">12</td>
+      <tr>
+        <td class="number">12.</td>
         <td>Francuski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/French_language" target="_blank">French language</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/francuski.jpg" target="_blank"><img src="slike/francuski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">13</td>
+        <td class="number">13.</td>
         <td>Filipinski (Tagalog) jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Tagalog_language" target="_blank">Filipino (Tagalog) language</a></td>
-        <td class="center">1</td>
+        <td></td>
         <td class="center"><a href="slike/filipinski.jpg" target="_blank"><img src="slike/filipinski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">14</td>
+        <td class="number">14.</td>
         <td>Filipinski (Bikol) jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bikol_languages" target="_blank">Filipino (Bikol) Language</a></td>
-        <td class="center">2</td>
+        <td></td>
         <td class="center"><a href="slike/filipinski(bicol).jpg" target="_blank"><img src="slike/filipinski(bicol).jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">16</td>
+        <td class="number">16.</td>
         <td>Grčki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Greek_language" target="_blank">Greek language</a></td>
-        <td class="center">1</td>
+        <td></td>
         <td class="center"><a href="slike/grcki.jpg" target="_blank"><img src="slike/grcki.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">17</td>
+        <td class="number">17.</td>
         <td>Starogrčki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Ancient_Greek" target=_blank">Ancient Greek language</a></td>
-        <td class="center">2</td>
+        <td></td>
         <td class="center"><a href="slike/starogrcki.jpg" target="_blank"><img src="slike/starogrcki.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">18</td>
+        <td class="number">18.</td>
         <td>Hebrejski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Hebrew_language" target="_blank">Hebrew language</a></td>
-        <td class="center"></td>
+        <td class="rtl">הנסיך הקטן</td>
         <td class="center"><a href="slike/hebrejski.jpg" target="_blank"><img src="slike/hebrejski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">19</td>
+        <td class="number">19.</td>
         <td>Hindi jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Hindi" target="_blank">Hindi language</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/hindi.jpg" target="_blank"><img src="slike/hindi.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">20</td>
+        <td class="number">20.</td>
         <td>Holandski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Dutch_language" target="_blank">Dutch language</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/holandski.jpg" target="_blank"><img src="slike/holandski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">21</td>
+        <td class="number">21.</td>
         <td>Italijanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Italian_language" target="_blank">Italian language</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/italijanski.jpg" target="_blank"><img src="slike/italijanski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
-          <tr>
-        <td class="number">22</td>
+      <tr>
+        <td class="number">22.</td>
         <td>Italijanski, Milanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Milanese_dialect" target="_blank">Italian, Milanese dialect</a></td>
-        <td class="center"></td>
-        <td class="center"><a href="slike/milanski dijalekt.jpg" target="_blank"><img src="slike/milanski dijalekt.jpg" width="50px" heiht="100px"></a></td>
+        <td></td>
+        <td class="center"><a href="slike/milanski-dijalekt.jpg" target="_blank"><img src="slike/milanski-dijalekt.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">23</td>
+        <td class="number">23.</td>
         <td>Moliški dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect"_blank">Molise dialect</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/moliski.jpg" target="_blank"><img src="slike/moliski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">24</td>
+        <td class="number">24.</td>
         <td>Kazaški jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kazakh_language" target="_blank">Kazakh language</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/kazaski.jpg" target="_blank"><img src="slike/kazaski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">25</td>
+        <td class="number">25.</td>
         <td>Kineski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Chinese_language" target="_blank">Chinese language</a></td>
-        <td class="center"></td>
+        <td>小王子</td>
         <td class="center"><a href="slike/kineski.jpg" target="_blank"><img src="slike/kineski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
       <tr>
-        <td class="number">26</td>
+        <td class="number">26.</td>
         <td>Kurdski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kurdish_languages" target="_blank">Kurdish language</a></td>
-        <td class="center"></td>
+        <td></td>
         <td class="center"><a href="slike/kurdski.jpg" target="_blank"><img src="slike/kurdski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 <!--
       <tr>
-        <td class="number">##BROJ##</td>
+        <td class="number">##BROJ (sa tackom na kraju)##</td>
         <td>##IME NA SRPSKOM##</td>
         <td><a href="##LINK KA WIKIPEDIJI##" target="_blank">##IME NA ENGLESKOM##</a></td>
-        <td class="center">##VERZIJA ILI PRAAZNO##</td>
+        <td>##NASLOV NA JEZIKU (ako je sdesna na levo, kopiraj stavi u td tagu class="rtl" kao arpaski ili hebrejski)##</td>
         <td class="center"><a href="slike/kurdski.jpg" target="_blank"><img src="slike/kurdski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
 -->
@@ -246,9 +251,9 @@
     <a href="slike/madjarski.jpg">Madjarski</a><br/>
     <a href="slike/makedonski.jpg">Makedonski</a><br/>
     <a href="slike/nemacki.jpg">Nemački</a><br/>
-    <a href="slike/osmanski turski.jpg">Osmanski turski</a><br/>
+    <a href="slike/osmanski-turski.jpg">Osmanski turski</a><br/>
     <a href="slike/poljski.jpg">Poljski</a><br/>
-    <a href="slike/portugalski (brazil).jpg">Portugalski (Brazil)</a><br/>
+    <a href="slike/portugalski(brazil).jpg">Portugalski (Brazil)</a><br/>
     <a href="slike/prekomurski.jpg">Prekomurski</a><br/>
     <a href="slike/ruski.jpg">Ruski</a><br/>
     <a href="slike/sanskrit.jpg">Sanskrit</a><br/>
