Fixed attribute bug

--- a/new.html
+++ b/new.html
@@ -162,7 +162,7 @@
       <tr>
         <td class="number">17.</td>
         <td>Starogrčki jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Ancient_Greek" target=_blank">Ancient Greek language</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Ancient_Greek" target="_blank">Ancient Greek language</a></td>
         <td></td>
         <td class="center"><a href="slike/starogrcki.jpg" target="_blank"><img src="slike/starogrcki.jpg" width="50px" heiht="100px"></a></td>
       </tr>
@@ -204,7 +204,7 @@
       <tr>
         <td class="number">23.</td>
         <td>Moliški dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect"_blank">Molise dialect</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect" target="_blank">Molise dialect</a></td>
         <td></td>
         <td class="center"><a href="slike/moliski.jpg" target="_blank"><img src="slike/moliski.jpg" width="50px" heiht="100px"></a></td>
       </tr>
