--- a/new.html
+++ b/new.html
@@ -243,6 +243,13 @@
         <td></td>
         <td class="image"><a href="slike/kurdski.jpg" target="_blank"><img src="slike/kurdski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Latinski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Latin" target="_blank">Latin language</a></td>
+        <td>Principulus</td>
+        <td class="image"><a href="slike/latinski.jpg" target="_blank"><img src="slike/latinski.jpg" width="50px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number"><span class="auto"></span></td>
