--- a/new.html
+++ b/new.html
@@ -240,7 +240,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Kurdski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kurdish_languages" target="_blank">Kurdish language</a></td>
-        <td></td>
+        <td>Mirzaye Piçük</td>
         <td class="image"><a href="slike/kurdski.jpg" target="_blank"><img src="slike/kurdski.jpg" width="50px"></a></td>
       </tr>
       <tr>
