--- a/new.html
+++ b/new.html
@@ -142,7 +142,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Esperanto</td>
         <td><a href="https://en.wikipedia.org/wiki/Esperanto" target="_blank">Esperanto</a></td>
-        <td></td>
+        <td>La Eta Princo</td>
         <td class="image"><a href="slike/esperanto.jpg" target="_blank"><img src="slike/esperanto.jpg" width="50px"></a></td>
       </tr>
       <tr>
@@ -163,14 +163,14 @@
         <td class="number"><span class="auto"></span></td>
         <td>Filipinski (Bikol) jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bikol_languages" target="_blank">Filipino (Bikol) Language</a></td>
-        <td></td>
+        <td>An Sadit na Prinsipe</td>
         <td class="image"><a href="slike/filipinski(bicol).jpg" target="_blank"><img src="slike/filipinski(bicol).jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Grčki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Greek_language" target="_blank">Greek language</a></td>
-        <td></td>
+        <td>Ο μικρός πρίγκιπας</td>
         <td class="image"><a href="slike/grcki.jpg" target="_blank"><img src="slike/grcki.jpg" width="50px"></a></td>
       </tr>
       <tr>
