--- a/new.html
+++ b/new.html
@@ -177,7 +177,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Starogrčki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Ancient_Greek" target="_blank">Ancient Greek language</a></td>
-        <td></td>
+        <td>Τὸ βασιλείδιον</td>
         <td class="image"><a href="slike/starogrcki.jpg" target="_blank"><img src="slike/starogrcki.jpg" width="50px"></a></td>
       </tr>
       <tr>
