--- a/new.html
+++ b/new.html
@@ -107,7 +107,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Baškirski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bashkir_language" target="_blank">Bashkir language</a></td>
-        <td></td>
+        <td>Бәләкәй шаһзат</td>
         <td class="image"><a href="slike/baskirski.jpg" target="_blank"><img src="slike/baskirski.jpg" width="50px"></a></td>
       </tr>
       <tr>
