--- a/new.html
+++ b/new.html
@@ -114,28 +114,28 @@
         <td class="number"><span class="auto"></span></td>
         <td>Bosanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
-        <td></td>
+        <td>Mali princ</td>
         <td class="image"><a href="slike/bosanski.jpg" target="_blank"><img src="slike/bosanski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Bugarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
-        <td></td>
+        <td>Малкия принц</td>
         <td class="image"><a href="slike/bugarski.jpg" target="_blank"><img src="slike/bugarski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Bugarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
-        <td></td>
+        <td>Малкия принц</td>
         <td class="image"><a href="slike/bugarski-2.jpg" target="_blank"><img src="slike/bugarski-2.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Engleski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/English_language" target="_blank">English language</a></td>
-        <td></td>
+        <td>The Little prince</td>
         <td class="image"><a href="slike/engleski.jpg" target="_blank"><img src="slike/engleski.jpg" width="50px"></a></td>
       </tr>
       <tr>
@@ -149,14 +149,14 @@
         <td class="number"><span class="auto"></span></td>
         <td>Francuski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/French_language" target="_blank">French language</a></td>
-        <td></td>
+        <td>Le Petit prince</td>
         <td class="image"><a href="slike/francuski.jpg" target="_blank"><img src="slike/francuski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Filipinski (Tagalog) jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Tagalog_language" target="_blank">Filipino (Tagalog) language</a></td>
-        <td></td>
+        <td>Ang Munting Prinsipe</td>
         <td class="image"><a href="slike/filipinski.jpg" target="_blank"><img src="slike/filipinski.jpg" width="50px"></a></td>
       </tr>
       <tr>
